# foundry-bridge

./: .dockerignore  .gitignore  AUDIT_IMPLEMENTATION_TRACKER.md  AUDIT_REDESIGN_WORK_TRACKER.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  plan-auditingAgent.prompt.md  pyproject.toml  subscriber_example.py  subscriber_transcriber.py  userscript.js
.agents/skills/diataxis-docs/: SKILL.md
.agents/skills/duck/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_create_transcripts.py  0002_rename_label_to_character_name.py  0003_add_note_taker_schema.py  0004_add_embedding_columns.py  0005_backfill_and_index_embeddings.py  0006_add_quest_table.py  0007_add_quest_description_history.py  0008_add_notes_entities.py  0009_add_thread_opened_by_note_id.py  0010_add_audit_tables.py  0011_redesign_audit_flags.py
docs/: README.md  architecture.md  getting-started.md
docs/explanation/: architecture.md
docs/how-to/: audit-workflow.md  contributing.md  database-migrations.md  deploy-docker-compose.md  deploy-with-docker.md  foundry-integration.md  install-the-userscript.md  load-demo-data.md  local-development.md  set-up-transcription.md  setup-api-keys.md  troubleshoot-common-issues.md  write-a-custom-subscriber.md
docs/reference/: api.md  base-subscriber-api.md  cli-commands.md  configuration.md  database-schema.md  environment-variables.md  modules.md  websocket-protocol.md
docs/tutorials/: getting-started.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: DiffView.tsx  NotesBadge.tsx  TabHeader.tsx  (+1 more)
seeds/: 01_first_session.sql  01b_first_session_extended.sql  01c_caravan_resolution.sql  01d_combat_encounter.sql  01e_combat_continuation.sql  02_mid_campaign.sql  03_complex_state.sql  load_01.sh
src/foundry_bridge/: __init__.py  api.py  audit_generator.py  auditor.py  db.py  health_check.py  locks.py  models.py  note_generator.py  note_taker.py  server.py  subscriber.py  transcriber.py
(+22 files in other folders)
